# FPGA-Memory-Access-Visualizer

./: .gitignore  .gitmodules  LICENSE  README.md
Results/pass-reports/array_partition_block_cyclic/: memory_access_report.json
Results/pass-reports/array_partition_complete/: memory_access_report.json
docs/: hls_llvm_numeric_limits_fix.txt
pass-dev/: AnalysisDriver.cpp  AnalysisDriver.h  CMakeLists.txt  IRUtils.cpp  IRUtils.h  InterproceduralAnalysis.cpp  InterproceduralAnalysis.h  MemoryAccessPass.cpp  MemoryAnalysis.cpp  MemoryAnalysis.h  PragmaParser.cpp  PragmaParser.h  README.md  README.zh.md  ReportPrinter.cpp  ReportPrinter.h  TopLevelMemoryTracePass.cpp  TopLevelMemoryTraceRuntime.cpp  run_top_level_memory_trace_matmul.sh
python-tools/: TRANSACTION_TIMELINE.md  trace_projects.example.json
python-tools/run/: build_trace_memory_timeline.py  run_project_analysis.py  run_trace_memory_analysis.py  validate_physical_axi_inference.py
python-tools/tests/: test_transaction_timeline_golden.py
scripts/: run_vitis_hls_examples.sh
test-flow/: kernel.cpp  kernel.ll  kernel_annotated.ll  run_hls.tcl
toy-test-cases/matrix_mul_full_contiguous_hls/: README.md  matmul_full_contiguous.cpp  matmul_full_contiguous.h  matmul_full_contiguous_test.cpp  run_cosim.tcl  run_hls.tcl  vivado.jou  vivado_21052.backup.jou  vivado_pid21435.str
toy-test-cases/matrix_mul_full_contiguous_hls/component_matmul_full_contiguous/hls/.autopilot/db/driver/src/: CMakeLists.txt  Makefile  xmatmul_full_contiguous.c  xmatmul_full_contiguous_hw.h  xmatmul_full_contiguous_sinit.c
toy-test-cases/matrix_mul_hls/: README.md  matrix_mul.cpp  matrix_mul.h  matrix_mul_test.cpp  run_csynth.sh  run_hls.tcl
toy-test-cases/matrix_mul_row_col_hls/: README.md  matmul_row_col.cpp  matmul_row_col.h  matmul_row_col_test.cpp  run_hls.tcl  trace_project.json  vivado.jou
toy-test-cases/merge_sort_hls/: README.md  merge_sort.cpp  merge_sort.h  merge_sort_test.cpp  run_hls.tcl  trace_project.json
toy-test-cases/merge_sort_offchip_hls/: README.md  merge_sort_offchip.cpp  merge_sort_offchip.h  merge_sort_offchip_test.cpp  run_hls.tcl  trace_project.json
toy-test-cases/read_only/: read_only.cfg  read_write.cpp  read_write.h  run_hls.tcl  tb_read_write.cpp  trace_project.json  vivado.jou  vivado_11101.backup.jou  vivado_17148.backup.jou  vivado_18757.backup.jou  vivado_20347.backup.jou
toy-test-cases/read_write/: read_write.cfg  read_write.h  read_write.wcfg  trace_project.json  vivado.jou  vivado_17240.backup.jou  vivado_21670.backup.jou  vivado_pid21670.str
toy-test-cases/read_write_depth2/: read_write.cpp  read_write.h  read_write_depth2.wcfg  run_hls.tcl  tb_read_write.cpp  trace_project.json  vivado.jou  vivado_11006.backup.jou  vivado_12197.backup.jou  vivado_15440.backup.jou  vivado_19593.backup.jou  vivado_22238.backup.jou  vivado_24445.backup.jou  vivado_37184.backup.jou  vivado_7285.backup.jou  vivado_8446.backup.jou  vivado_pid12197.str  vivado_pid16511.str
toy-test-cases/read_write_join/: read_write_join.cfg  read_write_join.cpp  read_write_join.h  tb_read_write_join.cpp
toy-test-cases/vector_mul_shared_bundle_hls/: run_csynth.sh  run_hls.tcl  vector_mul.cpp  vector_mul.h  vector_mul_test.cpp
(+1918 files in other folders)
